--- a/src/components/Footer/Styles.css
+++ b/src/components/Footer/Styles.css
@@ -3,6 +3,7 @@ footer .footer-top {
   border-top: 1px solid #e9e9e9;
   color: #777;
   padding: 70px 0px;
+  box-sizing: border-box;
 }
 
 .footer-top-left-content {
@@ -17,8 +18,9 @@ footer .footer-top {
 
 .footer-top-left-content p {
   text-align: left;
-  margin-bottom: 25px;
+  margin: 5px 0 25px 0;
   font-size: 13px;
+  line-height: 24px;
 }
 
 .footer-top-left-content img {
@@ -28,8 +30,9 @@ footer .footer-top {
 
 .footer-top-right-content {
   float: left;
-  width: calc((100% / 12 * 4) - 100px);
-  margin-left: 100px;
+  width: calc((100% / 12 * 4) - 82.156px);
+  margin-left: 82.156px;
+  padding: 0 15px;
   box-sizing: border-box;
   text-align: left;
 }
@@ -55,8 +58,18 @@ footer .footer-top {
   text-decoration: underline;
 }
 
+footer .footer-bottom {
+  background-color: #f7f7f7;
+  color: #777;
+  font-size: 12px;
+  padding: 40px 0px 38px;
+  box-sizing: border-box;
+}
+
 .footer-bottom-right-content-text {
   text-align: left;
+  margin: 0 0 1px 0;
+  overflow: -webkit-paged-y;
 }
 
 .footer-bottom-right-content-text a {
@@ -65,17 +78,23 @@ footer .footer-top {
   border-bottom: 1px solid #777;
 }
 
-footer .footer-bottom {
-  background-color: #f7f7f7;
-  color: #777;
-  font-size: 12px;
-  padding: 40px 0px;
-}
-
 @media (max-width: 768px) {
+  .footer-top {
+    min-height: 446px;
+  }
+  .footer-bottom {
+    min-height: 112px;
+  }
   .footer-top-left-content,
   .footer-top-right-content {
     width: 100%;
     margin-left: 0;
+    padding: 0;
+  }
+  .footer-top-left-content img {
+    padding-top: 30px;
+  }
+  .footer-top-right-content-information {
+    margin-top: 30px;
   }
 }
