--- a/src/components/Section/Components/Tabs/Components/Tab/styles.css
+++ b/src/components/Section/Components/Tabs/Components/Tab/styles.css
@@ -4,13 +4,10 @@
     border: 1px solid #e9e9e9;
     border-bottom-color: transparent;
     margin: 0 2px -1px 0;
+    cursor: pointer;
 }
 
 .tabs-item.active {
     border-top: 2px solid #623296;
     border-bottom-color: #F7F7F7; 
-}
-
-.tabs-item-link {
-    text-decoration: none;
 }
