--- a/src/components/Section/Components/Tabs/Components/Tab/styles.css
+++ b/src/components/Section/Components/Tabs/Components/Tab/styles.css
@@ -5,6 +5,7 @@
     border-bottom-color: transparent;
     margin: 0 2px -1px 0;
     cursor: pointer;
+    color: #623296;
 }
 
 .tabs-item.active {
