--- a/src/components/Title/styles.css
+++ b/src/components/Title/styles.css
@@ -3,16 +3,35 @@
   color: #623296;
 }
 .title.category {
+  text-align: center;
   font-size: 26px;
+  font-weight: 300;
 }
 .title.subcategory {
   font-size: 22px;
 }
-
 .title.section {
   font-size: 18px;
 }
 
+.color-bar {
+  width: 80%;
+  margin: 0 auto;
+}
+.color-bar span {
+  display: inline-block;
+  width: calc(100% / 3);
+  height: 3px;
+}
+.color-bar-section-1 {
+  background-color: #623296;
+}
+.color-bar-section-2 {
+  background-color: #9c4dcc;
+}
+.color-bar-section-3 {
+  background-color: #c158dc;
+}
 .title a {
   text-decoration: none;
   color: #623296;
