--- a/src/components/Title/styles.css
+++ b/src/components/Title/styles.css
@@ -1,3 +1,8 @@
+.category-title-wrapper {
+  background-color: #f7f7f7;
+  padding-bottom: 10px;
+}
+
 .title {
   text-align: left;
   color: #623296;
@@ -15,8 +20,8 @@
 }
 
 .color-bar {
-  width: 80%;
-  margin: 0 auto;
+  /*width: 80%;*/
+  margin: -14px auto 0;
 }
 .color-bar span {
   display: inline-block;
