--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+/*colores*/
+/*
+
+COLORES LOGO
+#6D72AA violeta oscuro
+#9167B1 violeta claro
+#ED5C88 rosa
+#F4A04B naranja
+
+COLOR VIOLETA PAGE
+#623296
+
+*/
