--- a/src/components/Section/Components/Tabs/Components/Tab/styles.css
+++ b/src/components/Section/Components/Tabs/Components/Tab/styles.css
@@ -4,11 +4,13 @@
     border: 1px solid #e9e9e9;
     border-bottom-color: transparent;
     margin: 0 2px -1px 0;
+    font-size: 14px;
     cursor: pointer;
-    color: #623296;
+    color: #363636;
 }
 
 .tabs-item.active {
-    border-top: 2px solid #623296;
+    border-top: 2px solid #ED5C88;
     border-bottom-color: #F7F7F7; 
+    color: #623296;
 }
