--- a/src/components/Title/styles.css
+++ b/src/components/Title/styles.css
@@ -5,18 +5,28 @@
 
 .title {
   text-align: left;
+}
+
+.title a {
+  text-decoration: none;
   color: #623296;
 }
+
 .title.category {
   text-align: center;
   font-size: 26px;
   font-weight: 300;
 }
 .title.subcategory {
+  margin: 30px 0;
   font-size: 22px;
 }
+
 .title.section {
+  margin: 30px 0;
+  padding-bottom: 10px;
   font-size: 18px;
+  border-bottom: 1px solid #d2d3d4;
 }
 
 .color-bar {
@@ -33,11 +43,9 @@
 }
 .color-bar-section-2 {
   background-color: #9c4dcc;
+  background-color: #ED5C88;
 }
 .color-bar-section-3 {
   background-color: #c158dc;
-}
-.title a {
-  text-decoration: none;
-  color: #623296;
+  background-color: #F4A04B;
 }
