Adding media queries.

--- a/src/components/Landing/styles.css
+++ b/src/components/Landing/styles.css
@@ -5,3 +5,9 @@
     box-sizing: border-box;
     overflow: hidden;
 }
+
+@media (max-width: 768px) {
+    .right-wrapper {
+        width: 100%;
+    }
+}
