--- a/src/components/SideNav/styles.css
+++ b/src/components/SideNav/styles.css
@@ -1,9 +1,17 @@
 .side-nav-wrapper {
+    display: flex;
     float: left;
     width: calc((100% / 12 * 4) - 10px);
     margin-right: 10px; 
-    border: 1px solid #623296;
+    border: 1px solid #e9e9e9;
+    border-radius: 3px;
     box-sizing: border-box;
+}
+
+.side-nav {
+    position: sticky;
+    top: 150px;
+    width: 300px;
 }
 
 .side-nav-wrapper ul {
