--- a/src/components/SideNav/styles.css
+++ b/src/components/SideNav/styles.css
@@ -1,7 +1,11 @@
-.side-nav-wrapper {
-    display: flex;
-    float: left;
+.sticky-wrapper {
     width: calc((100% / 12 * 4) - 10px);
+    min-height: 100%;
+
+}
+.side-nav-wrapper {
+    width: 100%;
+    top: 0;
     margin-right: 10px; 
     border: 1px solid #e9e9e9;
     border-radius: 3px;
@@ -9,8 +13,6 @@
 }
 
 .side-nav {
-    position: sticky;
-    top: 150px;
     width: 300px;
 }
 
