--- a/src/components/Title/styles.css
+++ b/src/components/Title/styles.css
@@ -1,5 +1,4 @@
 .category-title-wrapper {
-  background-color: #f7f7f7;
   padding-bottom: 10px;
 }
 
@@ -13,9 +12,12 @@
 }
 
 .title.category {
+  padding: 20px 0;
+  margin: 0 auto;
   text-align: center;
   font-size: 26px;
   font-weight: 300;
+  background-color: #f7f7f7;
 }
 .title.subcategory {
   margin: 30px 0;
@@ -30,8 +32,9 @@
 }
 
 .color-bar {
-  /*width: 80%;*/
-  margin: -14px auto 0;
+  height: 3px;
+  margin: 0 auto;
+  line-height: 0;
 }
 .color-bar span {
   display: inline-block;
