--- a/src/components/SideNav/styles.css
+++ b/src/components/SideNav/styles.css
@@ -10,6 +10,8 @@
     border: 1px solid #e9e9e9;
     border-radius: 3px;
     box-sizing: border-box;
+    height: 90vh;
+    overflow: scroll;
 }
 
 .side-nav {
