--- a/src/components/MainTitle/styles.css
+++ b/src/components/MainTitle/styles.css
@@ -14,3 +14,9 @@
     font-size: 26px;
     font-weight: 400;
 }
+
+@media (max-width: 768px) {
+    .main-title {
+        padding: 0 20px;
+    }
+}
