--- a/src/components/SideNav/styles.css
+++ b/src/components/SideNav/styles.css
@@ -10,7 +10,7 @@
     border: 1px solid #e9e9e9;
     border-radius: 3px;
     box-sizing: border-box;
-    height: 90vh;
+    max-height: 90vh;
     overflow: scroll;
 }
 
