Changing width in mainTitle and font color in more-info-link.

--- a/src/components/MainTitle/styles.css
+++ b/src/components/MainTitle/styles.css
@@ -1,6 +1,8 @@
 .main-title-wrapper {
     width: 100%;
+    max-width: 1733px;
     height: 100px;
+    margin: 0 auto;
     background-image: url('https://openqube.io/img/slider_bg.jpg'); 
     background-position: 0;
 }
