--- a/src/components/Section/Components/Barh/styles.css
+++ b/src/components/Section/Components/Barh/styles.css
@@ -21,6 +21,7 @@
     padding: 5px 10px;
     box-shadow: rgba(0, 0, 0, 0.1) 1px 1px 3px 0px;
     font-size: 12px;
+    color: #623296;
     text-decoration: none; 
     transition: all ease-in-out 0.3s;
 }
