--- a/src/components/Section/Components/Tabs/Components/Tab/styles.css
+++ b/src/components/Section/Components/Tabs/Components/Tab/styles.css
@@ -7,6 +7,7 @@
     font-size: 14px;
     cursor: pointer;
     color: #363636;
+    box-sizing: border-box;
 }
 
 .tabs-item.active {
@@ -17,6 +18,9 @@
 
 @media (max-width: 460px) {
     .tabs-item{
+        display: block;
+        width: 100%;
+        text-align: center;
         font-size: 12px;
     }
   }
