Fixing mobile styles in MapArgentina.

--- a/src/components/MainTitle/styles.css
+++ b/src/components/MainTitle/styles.css
@@ -17,8 +17,18 @@
     font-weight: 400;
 }
 
+@media (min-width: 340px) and (max-width: 768px) {
+    .main-title {
+        margin-top: 24px;
+    }
+}
+
 @media (max-width: 768px) {
+    .main-title-wrapper {
+        height: 80px;
+    }
     .main-title {
         padding: 0 20px;
+        font-size: 22px;
     }
 }
