--- a/src/components/Landing/styles.css
+++ b/src/components/Landing/styles.css
@@ -1,3 +1,12 @@
+.category-section {
+    padding-top: 20px;
+    margin-bottom: 150px;
+}
+
+.subcategory-section {
+    padding-top: 10px;
+}
+
 .right-wrapper {
     float: left;
     width: calc(100% / 12 * 9);
