--- a/src/components/Section/Components/Barh/styles.css
+++ b/src/components/Section/Components/Barh/styles.css
@@ -15,6 +15,8 @@
 .more-info-wrapper {
     text-align: right;
     margin-bottom: 15px;
+    margin-right: 5px;
+    box-sizing: border-box;
 }
 
 .more-info-link {
