--- a/src/components/Section/Components/Tabs/Components/Tab/styles.css
+++ b/src/components/Section/Components/Tabs/Components/Tab/styles.css
@@ -12,7 +12,7 @@
 
 .tabs-item.active {
     border-top: 2px solid #ED5C88;
-    border-bottom-color: #F7F7F7; 
+    border-bottom-color: #FFF; 
     color: #623296;
 }
 
