--- a/src/components/Section/Components/Barh/styles.css
+++ b/src/components/Section/Components/Barh/styles.css
@@ -29,8 +29,40 @@
 }
 
 .more-info-link:hover {
-    box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px 0px;
+    box-shadow: rgba(0, 0, 0, 0.8) 1px 1px 3px 0px;
     transition: all ease-in-out 0.3s
+}
+
+/*TOOLTIP*/
+.tooltip {
+    position: relative;
+    margin: 0;
+    padding: 20px;
+    list-style: none;
+    border: 1px solid #e9e9e9;
+    background-color: #fff;
+   
+}   
+
+
+.tooltip-item {
+    margin: 5px 0 0 0;
+    z-index: 10;
+}
+
+.tooltip-item .name, 
+.tooltip-item .value {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.tooltip-item .name {
+    font-size: 12px;
+    z-index: 100;
+}
+.tooltip-item .value {
+    font-size: 20px;
 }
 
 
