--- a/src/components/Section/Components/Barh/styles.css
+++ b/src/components/Section/Components/Barh/styles.css
@@ -8,8 +8,13 @@
     /*font-family: Roboto, sans-serif;*/
 }
 
+.recharts-wrapper {
+    margin: 0 auto;
+}
+
 .recharts-legend-wrapper {
     font-size: 0.85rem;
+    width: inherit !important;
 }
 
 .more-info-wrapper {
@@ -37,11 +42,10 @@
 .tooltip {
     position: relative;
     margin: 0;
-    padding: 20px;
+    padding: 15px;
     list-style: none;
     border: 1px solid #e9e9e9;
-    background-color: #fff;
-   
+    background-color: rgba(255, 255, 255, 0.9);
 }   
 
 
@@ -60,6 +64,7 @@
 .tooltip-item .name {
     font-size: 12px;
     z-index: 100;
+    font-weight: 700;
 }
 .tooltip-item .value {
     font-size: 20px;
@@ -67,6 +72,12 @@
 
 
 @media (max-width: 460px) {
+    .recharts-wrapper {
+        zoom: 60%;
+    }
+}
+
+@media (max-width: 421px) {
     .recharts-wrapper {
         zoom: 50%;
     }
