--- a/src/components/Title/styles.css
+++ b/src/components/Title/styles.css
@@ -12,22 +12,23 @@
 }
 
 .title.category {
-  padding: 20px 0;
+  padding: 30px 0 20px;
   margin: 0 auto;
   text-align: center;
   font-size: 26px;
   font-weight: 300;
   background-color: #f7f7f7;
 }
+
 .title.subcategory {
-  margin: 30px 0;
-  font-size: 22px;
+  margin: 40px 0 20px;
+  font-size: 20px;
 }
 
 .title.section {
-  margin: 30px 0;
-  padding-bottom: 10px;
-  font-size: 18px;
+  margin: 30px 0 20px;
+  padding-bottom: 6px;
+  font-size: 16px;
   border-bottom: 1px solid #d2d3d4;
 }
 
@@ -59,14 +60,15 @@
   }
 
   .title.subcategory {
-    margin: 10px 0;
+    margin: 20px 0 10px;
     font-size: 18px;
+    text-align: center;
   }
 
   .title.section {
-    margin: 10px 0;
+    margin: 20px 0 10px;
     border: none;
     font-size: 14px;
+    text-align: center;
   }
-  
 }
