--- a/src/components/Section/Components/CustomizedTooltip/styles.css
+++ b/src/components/Section/Components/CustomizedTooltip/styles.css
@@ -6,8 +6,7 @@
     list-style: none;
     border: 1px solid #e9e9e9;
     background-color: rgba(255, 255, 255, 0.9);
-}   
-
+}
 
 .tooltip-item {
     margin: 5px 0 0 0;
@@ -26,6 +25,7 @@
     z-index: 100;
     font-weight: 700;
 }
+
 .tooltip-item .value {
     font-size: 20px;
 }
@@ -33,6 +33,12 @@
 .no-data {
     font-style: italic;
     font-size: 0.75em;
+}
+
+.invalid {
+    font-style: italic;
+    font-size: 0.75em;
+    color: #ccc;
 }
 
 .meme {
