Adding SocialList in Header.

--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -5,6 +5,8 @@ header {
 }
 
 header .container {
+  display: flex;
+  justify-content: space-between;
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
