--- a/src/components/SideNav/styles.css
+++ b/src/components/SideNav/styles.css
@@ -9,7 +9,7 @@
     border: 1px solid #e9e9e9;
     border-radius: 3px;
     box-sizing: border-box;
-    max-height: 90vh;
+    max-height: 95vh;
     overflow: scroll;
     box-sizing: border-box;
 }
@@ -23,6 +23,10 @@
     list-style: none;
     box-sizing: border-box;
     counter-reset: item;
+}
+
+.side-nav-wrapper > ul {
+    padding-bottom: 0;
 }
 
 .side-nav-wrapper li {
