--- a/src/components/SocialList/styles.css
+++ b/src/components/SocialList/styles.css
@@ -14,7 +14,7 @@
     transition: all ease-in-out 0.3s;
 }
 .social-item a {
-    color: #623296;
+    color: #763DFE;
 }
 
 .social-item:first-child {
