--- a/src/components/SideNav/styles.css
+++ b/src/components/SideNav/styles.css
@@ -39,20 +39,19 @@
     font-size: 0.75em;
     margin: 0 5px;
     opacity: 0.6;
-    color: #623296;
+    color: #763DFE;
 }
 
 .side-nav-wrapper li.is-current:before {
     opacity: 1;
-}
-
+} 
 .side-nav-wrapper li a {
-    color: #623296;
+    color: #313142;
     text-decoration: none;
 }
 
 li.is-current > a {
-   color: #311b49;
+   color: #1E285F;
    font-weight: 700;
 }
 
